add images path

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 
             <h2>Famous Maharashtrian Food</h2>
             <h1>Home page</h1>
+            
+              <h3>"Pure Taste of Pure Maharashtra"</h3>
+       <p>Explore our menu, learn about us, or get in touch</p>
+       <div>
+     </body>
+</html>
     </div>
     </body>                                                                                                                                                                                   
 </html>
