--- a/pages/about.html
+++ b/pages/about.html
@@ -14,6 +14,12 @@
 
               <h2>Welcome to Maharashtrian Food<h2>
                 <h1>About page</h1>
+
+                <hr/>
+        <img src="./../images/download (1).webp"
+    alt="Famous Maharashtrian Food"
+    height="190px"/>
+
     </div>
     </body>                                                                                                                                                                                   
 </html>
