--- a/pages/about.html
+++ b/pages/about.html
@@ -19,6 +19,18 @@
         <img src="./../images/download (1).webp"
     alt="Famous Maharashtrian Food"
     height="190px"/>
+    <p>
+           <h2>Taste of Maharashtra</h2> 
+        The Taste of Maharashtra is a rich and diverse cuisine 
+        characterized by a balance of <b>spicy, sweet, and tangy
+        flavors,</b> heavily influenced by its geography and regional
+        cultures. Popular dishes range from street food staples 
+        like <b>Vada Pav</b> and<b> Misal Pav </b>to coastal seafood curries,
+        inland vegetarian lentil preparations, and
+        celebratory sweets like <b>Modak and Puran Poli.</b>
+     </p>
+    </body>
+</html>
 
     </div>
     </body>                                                                                                                                                                                   
