--- a/pages/menu.html
+++ b/pages/menu.html
@@ -15,4 +15,7 @@
               <h2> Welcome to Famous Maharashtrian Food</h2>
         <h1>Menu Page</h1>
 </div>
-
+ <hr>
+ <a href="menu.html">
+    <img src="./../images/download.jpg">
+ </a>
