--- a/pages/menu.html
+++ b/pages/menu.html
@@ -18,4 +18,11 @@
  <hr>
  <a href="menu.html">
     <img src="./../images/download.jpg">
+    <h1>Purnpoli</h1>
  </a>
+ <p>
+   <b> Puran Poli</b> is a traditional Indian sweet flatbread,<b> popular in Maharashtra and South India,</b>   
+      where it is known by various names such as<b> Holige or Obbattu</b>. It consists of a soft flatbread 
+     <b>(poli)</b> stuffed with a sweet filling <b>(puran)</b>typically made from<b> chana dal
+     (split chickpeas) & jaggery, flavored with aromatic spices.</b>
+ </p>
