--- a/pages/menu.html
+++ b/pages/menu.html
@@ -26,3 +26,10 @@
      <b>(poli)</b> stuffed with a sweet filling <b>(puran)</b>typically made from<b> chana dal
      (split chickpeas) & jaggery, flavored with aromatic spices.</b>
  </p>
+
+ <div>
+    <a href="menu.html">
+        <img src="./../images/misal pav.webp">
+    </a>
+    
+ </div>
