--- a/pages/menu.html
+++ b/pages/menu.html
@@ -30,6 +30,21 @@
  <div>
     <a href="menu.html">
         <img src="./../images/misal pav.webp">
+        <h1>Misal pav</h1>
+    </a>
+    <p>
+        <b>Misal pav is a dish from the Indian state of Maharashtra.</b>
+         It consists of a vegetable curry, mostly made from, <b>moth beans</b>
+         locally known as misal & pav, which is a type of <b>Indian bread roll.</b>
+        The final dish is topped with <b>farsan or sev,</b> <b>onions,lemon and coriander</b> .
+         It is usually served hot with bread or rolls <b>toasted with butter 
+        and buttermilk or dahi and papad.</b>
+        <b> Misal pav is served as a breakfast dish, as a snack and also as a full meal.</b>
+    </p>
+ </div>
+    <a href="menu.html">
+        <img src="./../images/vada pav.webp">
+        <h1>Vada pav</h1>
     </a>
     
- </div>
+    
