--- a/pages/menu.html
+++ b/pages/menu.html
@@ -46,5 +46,11 @@
         <img src="./../images/vada pav.webp">
         <h1>Vada pav</h1>
     </a>
-    
+    <p>
+         <b>Vada pav is a popular vegetarian fast food from Maharashtra,India</b>
+        consisting of a deep-fried spicy potato fritter<b>(Vada)</b>
+         served in a soft bread bun <b>(Pav)</b>with various<b>Chutneys.</b>
+         It is often called an<b>"Indian burger"</b>
+        and is a staple of<b> Mumbai street food</b>, known for it<b> spicy and savory flavor</b>
+    </p>
     
