--- a/pages/menu.html
+++ b/pages/menu.html
@@ -53,4 +53,6 @@
          It is often called an<b>"Indian burger"</b>
         and is a staple of<b> Mumbai street food</b>, known for it<b> spicy and savory flavor</b>
     </p>
+    </body>
+</html>
     
