--- a/pages/contact.html
+++ b/pages/contact.html
@@ -20,7 +20,11 @@
 <a href="Name:Pathare Bhakti Dadasaheb"><b>Name:</b>Pathare Bhakti Dadasaheb</b></a></br><br/>
 <img src="./../images/gmail.webp" height="20px"/>
 <a href="mailto:patharebhakti14@gmail.com"><b></b>patharebhakti14@gmail.com</a></br></br>
+<img src="./../images/call icon.webp"   height="20px"/> 
+<a href="tel:+9422473335"><b>Tel:</b>9422473335</b></a>
 
+
+    </div>
 
          </hr>
     </body>
