--- a/pages/contact.html
+++ b/pages/contact.html
@@ -22,14 +22,13 @@
 <a href="mailto:patharebhakti14@gmail.com"><b></b>patharebhakti14@gmail.com</a></br></br>
 <img src="./../images/call icon.webp"   height="20px"/> 
 <a href="tel:+9422473335"><b>Tel:</b>9422473335</b></a>
-
-
-    </div>
-
-         </hr>
-    </body>
-</html>
-
-       </div>
+<h3>Google Map Integration</h3>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d59998.55534859428!2d73.
+78764813823082!3d19.970299067538775!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bddeaaf
+fae33fc9%3A0x1adae8faada8eaa6!2sNashik%20Road%2C%20Nashik%2C%20Maharashtra!5e0!3m2!1sen!2sin!4v176055368
+1656!5m2!1sen!2sin" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" 
+referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
+   </hr>
     </body>
 </html>
